ros2_ws/log/build_2025-03-18_17-17-15/lane_detector/stdout_stderr.log
running egg_info
writing ../../../build/lane_detector/lane_detector.egg-info/PKG-INFO
writing dependency_links to ../../../build/lane_detector/lane_detector.egg-info/dependency_links.txt
writing entry points to ../../../build/lane_detector/lane_detector.egg-info/entry_points.txt
writing requirements to ../../../build/lane_detector/lane_detector.egg-info/requires.txt
writing top-level names to ../../../build/lane_detector/lane_detector.egg-info/top_level.txt
reading manifest file '../../../build/lane_detector/lane_detector.egg-info/SOURCES.txt'
writing manifest file '../../../build/lane_detector/lane_detector.egg-info/SOURCES.txt'
running build
running build_py
copying lane_detector/lane_detector.py -> /home/crofi/ros2_ws/build/lane_detector/build/lib/lane_detector
running install
running install_lib
copying /home/crofi/ros2_ws/build/lane_detector/build/lib/lane_detector/lane_detector.py -> /home/crofi/ros2_ws/install/lane_detector/lib/python3.10/site-packages/lane_detector
byte-compiling /home/crofi/ros2_ws/install/lane_detector/lib/python3.10/site-packages/lane_detector/lane_detector.py to lane_detector.cpython-310.pyc
  File "/home/crofi/ros2_ws/install/lane_detector/lib/python3.10/site-packages/lane_detector/lane_detector.py", line 89
    cv2.imshow('line detection',cv image)
                                ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

running install_data
running install_egg_info
removing '/home/crofi/ros2_ws/install/lane_detector/lib/python3.10/site-packages/lane_detector-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../../build/lane_detector/lane_detector.egg-info to /home/crofi/ros2_ws/install/lane_detector/lib/python3.10/site-packages/lane_detector-0.0.0-py3.10.egg-info
running install_scripts
Installing lane_detector script to /home/crofi/ros2_ws/install/lane_detector/lib/lane_detector
writing list of installed files to '/home/crofi/ros2_ws/build/lane_detector/install.log'
